--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body, html{
 	position:relative;
 	float:left;
 	box-sizing: border-box;
+	cursor:pointer;
 	border:1px solid black;
 	padding:5px;
 	background-size: 500px 500px;
